--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <title>Welcome Page</title>
 </head>
 <body>
-Welcome to Wehear, this is daddy! 
+Welcome to Wehear, if you are seeing this, this link is definately working!
+    ©Team Nigam-WeSense.
 </body>
 </html>
