--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <title>Welcome Page</title>
 </head>
 <body>
-Welcome to Wehear, if you are seeing this, this link is definately working!
+    Welcome to Wehear, if you are seeing this, this link is definately working!<br>
     ©Team Nigam-WeSense.
 </body>
 </html>
